# swagger_server/controllers/auth.py
@@ -1,0 +1,10 @@
+# coding: utf-8
+from swagger_server.config import settings
+
+
+def api_key(key, required_scopes=None):
+    if f'Bearer {settings.AUTHORIZATION}' == key:
+        return {'sub': 'admin'}
+
+    # optional: raise exception for custom error response
+    return None
